# habr-jwt-auth-example

./: Makefile  README.md  docker-compose.yml  pyproject.toml
postgres/: Dockerfile
src/: Dockerfile  pytest.ini
src/app/: conftest.py
src/app/internal/: main.py  models.py
src/app/internal/tests/: test_access_check_error.py
src/app/internal/users/: dto.py  models.py  service.py
src/app/internal/users/tests/get_me/: test_get_me_success.py
src/app/internal/users/transport/: handlers.py  responses.py
src/app/pkg/: errors.py  exceptions.py  responses.py  utils.py
src/app/pkg/auth/: dto.py  errors.py  models.py  service.py
src/app/pkg/auth/middlewares/jwt/: errors.py  service.py  utils.py
src/app/pkg/auth/middlewares/jwt/base/: auth.py  config.py  token_types.py
src/app/pkg/auth/middlewares/jwt/base/tests/: test_auth.py  utils.py
src/app/pkg/auth/tests/: conftest.py
src/app/pkg/auth/tests/login/: test_login_error.py  test_login_success.py
src/app/pkg/auth/tests/logout/: test_logout_success.py
src/app/pkg/auth/tests/register/: test_register_error.py  test_register_success.py
src/app/pkg/auth/tests/update_tokens/: test_update_tokens_error.py  test_update_tokens_success.py  utils.py
src/app/pkg/auth/transport/: handlers.py  requests.py  responses.py
src/app/pkg/for_tests/: utils.py
src/config/: settings.py
